--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -242,8 +242,16 @@ header div:nth-child(3) {
   top: -10em;
   right: -95em;
   width: 120%;
+  animation: rotate 3s linear infinite;
 }
-
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
 .poppy article {
   padding-top: 23%;
   margin-bottom: 80%;
@@ -280,19 +288,26 @@ footer article:nth-of-type(2) div:nth-child(2) img {
 }
 #banner {
   background-color: #fff;
-  /* width: 300px; */
   font-size: 7.2em;
   -webkit-text-stroke: 1px #000;
-  /* transform: translate(200px, 50px); */
+  /* transform: translate(50px, -650px); */
   /* transform: translateX(300px);
   transform: translateY(50px); */
   transform: rotate(45deg);
   position: absolute;
   right: -550px;
   top: 470px;
-
-  /* transform: scale(1.1); */
+  animation: move 3s linear infinite;
 }
+@keyframes move {
+  /* 0% {
+    transform: translateX(80px);
+  }
+  100% {
+    transform: translateX(120px);
+  } */
+}
+
 #banner span {
   color: #000;
 }
